<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hassle_tab_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/tab_background">

    <LinearLayout
        android:id="@+id/menu_list_cmd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:fontFamily="@font/din_pro_bold"
            android:text="@string/players_list_header_dialog"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />

        <RelativeLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="2">

            <EditText
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/players_list_border_search"
                android:fontFamily="@font/din_pro_medium"
                android:hint="@string/players_list_search_hint"
                android:imeOptions="actionGo|actionSend|actionDone|flagNoFullscreen|flagNoExtractUi"
                android:autofillHints="no"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/progress_gray"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/icon_clear_search_text"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_alignTop="@+id/search_view"
                android:layout_alignEnd="@+id/search_view"
                android:layout_alignBottom="@+id/search_view"
                android:layout_marginEnd="@dimen/_13sdp"
                android:clickable="true"
                android:visibility="invisible"
                android:src="@drawable/menu_close" />

            <ImageView
                android:id="@+id/icon_search_view"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_alignTop="@+id/search_view"
                android:layout_alignEnd="@+id/search_view"
                android:layout_alignBottom="@+id/search_view"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_search" />
        </RelativeLayout>

        <TextView
            android:id="@+id/players_list_value_players"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/players_list_bg_value_players"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center"
            android:paddingBottom="@dimen/_3sdp"
            android:shadowColor="#33383838"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="1000/1000"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/players_list_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/menu_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/players_list_name_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_list_cmd1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/menu_list_cmd1">

        <TextView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_weight="1"
            android:fontFamily="@font/din_pro_bold"
            android:text="@string/players_list_header_first_column"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/din_pro_bold"
            android:text="@string/players_list_header_second_column"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/din_pro_bold"
            android:text="@string/players_list_header_third_column"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/din_pro_bold"
            android:text="@string/players_list_header_fourth_column"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_below="@+id/players_list_name_column"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_red_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players_list_name_column" />

    <com.factor.bouncy.BouncyRecyclerView
        android:id="@+id/players_list"
        app:recyclerview_fling_animation_size=".1"
        app:recyclerview_overscroll_animation_size=".1"
        app:recyclerview_damping_ratio="DAMPING_RATIO_MEDIUM_BOUNCY"
        app:recyclerview_stiffness="STIFFNESS_LOW"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:layout_below="@+id/players_list_name_column"
        android:layout_marginTop="3dp"
        android:fadeScrollbars="false"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@drawable/players_list_scroll_thumb"
        android:scrollbarTrackVertical="@drawable/players_list_scroll_track"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view" />
</androidx.constraintlayout.widget.ConstraintLayout>
