<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/autoshop_main_layout"
    android:padding="10px"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

        <TextView
            android:id="@+id/autoshop_pricelabel"
            android:layout_width="210dp"
            android:layout_height="25dp"

            android:layout_marginTop="2dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="@string/autoshop_pricelabel"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="@+id/autoshop_modelname"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_modelname" />

        <ImageView
            android:layout_marginStart="4dp"
            android:padding="0.5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/autoshop_priceicon"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_pricelabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_pricelabel" />

        <TextView
            android:id="@+id/autoshop_pricevalue"
            android:layout_width="100dp"
            android:layout_height="25dp"

            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="40.000.000 руб."
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_modelname"
            app:layout_constraintTop_toTopOf="@+id/autoshop_pricelabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/testdrive_butt"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/yellow"

            android:padding="0px"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowRadius="1"
            android:text="Тест-драйв"
            android:textColor="#000000"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"
            android:fontFamily="@font/din_pro_bold"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="@+id/autoshop_modelname"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_pricelabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_buybutt"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:backgroundTint="#129D0A"

            android:padding="0px"

            android:text="Приобрести"
            android:shadowDx="1"
            android:shadowColor="@color/white"
            android:shadowRadius="1"
            android:textColor="#ffffff"
            android:textSize="@dimen/_8sdp"
            android:fontFamily="@font/din_pro_bold"
            android:textFontWeight="700"

            app:layout_constraintBottom_toBottomOf="@+id/testdrive_butt"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_modelname"
            app:layout_constraintStart_toStartOf="@+id/autoshop_modelname"
            app:layout_constraintTop_toTopOf="@+id/testdrive_butt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_exitbutt"
            android:layout_width="100dp"
            android:layout_height="47dp"
            android:backgroundTint="#004768"
            android:outlineAmbientShadowColor="#FAFD01"

            android:padding="0px"
            android:shadowDx="1"
            android:shadowColor="@color/white"
            android:shadowRadius="1"
            android:text="Выход"
            android:textColor="#ffffff"
            android:textSize="@dimen/_8sdp"
            android:fontFamily="@font/din_pro_bold"
            android:textFontWeight="700"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_modelname"
            app:layout_constraintTop_toTopOf="@+id/autoshop_buybutt" />

        <TextView
            android:id="@+id/autoshop_modelname"
            android:layout_width="320dp"
            android:layout_height="29dp"
            android:layout_marginBottom="75dp"
            android:background="@drawable/yellow_gradient_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"

            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="2"
            android:text="BMW M3"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/autoshop_customlabel"
            android:layout_width="168dp"
            android:layout_height="28dp"
            android:background="@drawable/yellow_gradient_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="bottom|center_horizontal|center_vertical"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="1"

            android:text="Кастомизация"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255" />

        <TextView
            android:id="@+id/autoshop_maxspeedlabel"

            android:layout_width="130dp"
            android:layout_height="28dp"

            android:layout_marginTop="5dp"
            android:background="@drawable/blue_rounded"

            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"

            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="@string/autoshop_max_speed"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"

            app:layout_constraintStart_toStartOf="@+id/autoshop_infolabel"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_infolabel" />

        <ImageView
            android:layout_marginStart="4dp"
            android:padding="0.5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/autoshop_aceleration_icon"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_maxspeedlabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_maxspeedlabel" />

        <TextView
            android:id="@+id/autoshop_maxspeedvalue"
            android:layout_width="60dp"
            android:layout_height="28dp"

            android:layout_marginStart="2dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="100 км/ч"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_infolabel"
            app:layout_constraintStart_toEndOf="@+id/autoshop_maxspeedlabel"
            app:layout_constraintTop_toTopOf="@+id/autoshop_maxspeedlabel" />



        <TextView
            android:id="@+id/autoshop_accelerationlabel"
            android:layout_width="130dp"
            android:layout_height="28dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="@string/autoshop_acceleration"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"
            app:layout_constraintStart_toStartOf="@+id/autoshop_infolabel"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_maxspeedlabel" />
        <ImageView
            android:layout_marginStart="4dp"
            android:padding="0.5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/autoshop_maxspeed_icon"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_accelerationlabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_accelerationlabel" />

        <TextView
            android:id="@+id/autoshop_accelerationvalue"
            android:layout_width="60dp"
            android:layout_height="28dp"

            android:layout_marginStart="2dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="2.5 с"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_infolabel"
            app:layout_constraintStart_toEndOf="@+id/autoshop_accelerationlabel"
            app:layout_constraintTop_toTopOf="@+id/autoshop_accelerationlabel" />

        <TextView
            android:id="@+id/autoshop_availablelabel"
            android:layout_width="130dp"

            android:layout_height="28dp"

            android:layout_marginTop="8dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="@string/autoshop_available"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"
            app:layout_constraintStart_toStartOf="@+id/autoshop_infolabel"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_accelerationlabel" />

        <ImageView
            android:layout_marginStart="4dp"
            android:padding="0.5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/autoshop_counticon"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_availablelabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_availablelabel" />

        <TextView
            android:id="@+id/autoshop_availablevalue"
            android:layout_width="60dp"
            android:layout_height="28dp"

            android:layout_marginStart="2dp"
            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowRadius="5"
            android:text="15"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_infolabel"
            app:layout_constraintStart_toEndOf="@+id/autoshop_availablelabel"
            app:layout_constraintTop_toTopOf="@+id/autoshop_availablelabel" />

        <TextView
            android:id="@+id/autoshop_infolabel"
            android:layout_width="192dp"
            android:layout_height="34dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/yellow_gradient_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="7dp"

            android:paddingBottom="7dp"
            android:shadowColor="@color/black"
            android:shadowRadius="3"
            android:text="Информация"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/autoshop_customlabel" />

        <TextView
            android:id="@+id/autoshop_colorlabel"
            android:layout_width="78dp"
            android:layout_height="36dp"

            android:layout_marginTop="8dp"

            android:background="@drawable/blue_rounded"
            android:fontFamily="@font/din_pro_bold"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/black"
            android:shadowRadius="0.5"
            android:text="Цвет автомобиля"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_customlabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_customlabel"
            app:layout_constraintTop_toBottomOf="@+id/autoshop_customlabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_colorright"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:background="@drawable/blue_rounded"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:outlineAmbientShadowColor="#FAFD01"
            android:padding="0px"

            android:shadowColor="#FAFD01"
            android:shadowDx="1"
            android:shadowRadius="3"
            android:text="@string/string_right"
            android:textColor="#FAFD01"
            android:textSize="@dimen/_8sdp"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_customlabel"
            app:layout_constraintTop_toTopOf="@+id/autoshop_colorlabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_colorleft"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:background="@drawable/blue_rounded"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:outlineAmbientShadowColor="#FAFD01"
            android:padding="0px"

            android:shadowColor="#FAFD01"
            android:shadowDx="1"
            android:shadowRadius="3"
            android:text="@string/arrow_left"
            android:textColor="#FAFD01"
            android:textSize="@dimen/_8sdp"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintStart_toStartOf="@+id/autoshop_customlabel"
            app:layout_constraintTop_toTopOf="@+id/autoshop_colorlabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_leftbutt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/autoshop_left_butt"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"


            android:scaleX="1"
            android:textColor="#FAFD01"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_colorlabel"
            app:layout_constraintStart_toStartOf="@+id/autoshop_colorlabel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_camerabutt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/autoshop_preview"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_rightbutt"
            app:layout_constraintEnd_toEndOf="@+id/autoshop_infolabel"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toEndOf="@+id/autoshop_rightbutt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/autoshop_rightbutt"
            android:layout_width="60dp"
            android:layout_height="60dp"


            android:background="@drawable/autoshop_left_butt"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleX="-1"
            android:textColor="#FAFD01"
            app:backgroundTint="@null"
            app:backgroundTintMode="@null"
            app:layout_constraintBottom_toBottomOf="@+id/autoshop_leftbutt"
            app:layout_constraintStart_toStartOf="@+id/autoshop_infolabel" />

</androidx.constraintlayout.widget.ConstraintLayout>